use python3 for building and installing mkdocs + theme
Signed-off-by: Alexander Trost <galexrt@googlemail.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,7 @@
 
 [context.production]
   command = "make deploy-production"
+
+# Make sure we are using an uptodate Python version
+[build.environment]
+  PYTHON_VERSION = "3.7"
