fix indentation of lists
Signed-off-by: Alexander Trost <galexrt@googlemail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,18 +12,7 @@ theme:
   favicon: images/favicon.png
   logo: images/logo.png
   palette:
-    - scheme: 'default'
-      primary: 'greenish'
-      accent: 'deep orange'
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
-    - scheme: 'slate'
-      primary: 'greenish'
-      accent: 'red'
-      toggle:
-        icon: material/toggle-switch
-        name: Switch to light mode
+    scheme: 'default'
   icon:
     repo: fontawesome/brands/github
   features:
