--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,8 @@ theme:
     - tabs
 extra_css:
   - stylesheets/extra.css
+extra_javascript:
+  - javascripts/netlify-identity-widget.js
 plugins:
   - search
   - minify:
