--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
-site_name: Koor Documentation
-site_url: 'https://docs.koor.tech'
-repo_url: https://github.com/koor-tech/docs.koor.tech
+site_name: Koor Technologies, Inc. Handbook
+site_url: 'https://handbook.koor.tech'
+repo_url: https://github.com/koor-tech/handbook
 edit_uri: edit/main/docs/
 site_author: Koor Technologies, Inc. Team
-site_description: "Koor Documentation for the Koor distribution and Rook."
+site_description: "Koor Technologies, Inc. Company Handbook inspired by GitLab's open handbook."
 use_directory_urls: true
 #copyright: ''
 theme:
