--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,18 +1,38 @@
 site_name: Koor Technologies, Inc. Handbook
-site_url: 'https://handbook.koor.tech'
+site_url: "https://handbook.koor.tech"
 repo_url: https://github.com/koor-tech/handbook.koor.tech
 edit_uri: edit/main/docs/
 site_author: Koor Technologies, Inc. Team
 site_description: "Koor Technologies, Inc. Company Handbook inspired by GitLab's open handbook."
 use_directory_urls: true
-#copyright: ''
+copyright: |
+  Copyright &copy; 2022 Rook & Koor Storage Distribution Authors All Rights Reserved.
+  <br>
+  Rook is a trademark of The Linux Foundation®.
+  <br>
+  Ceph is a trademark or registered trademark of Red Hat, Inc. or its subsidiaries in the United States and other countries.
+  <br>
+  All trademarks are property of their respective owners in the US and other countries.
 theme:
   name: material
   font: false
-  favicon: images/favicon.svg
-  logo: images/logo.svg
+  favicon: https://koor.tech/images/favicon.svg
+  logo: https://koor.tech/images/logo.svg
   palette:
-    scheme: 'default'
+    - media: "(prefers-color-scheme: dark)"
+      scheme: "slate"
+      primary: "koor-dark"
+      accent: "deep orange"
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: "default"
+      primary: "koor"
+      accent: "deep orange"
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
   icon:
     repo: fontawesome/brands/git-alt
   features:
@@ -20,7 +40,6 @@ theme:
     - instant
     - navigation.expand
     - navigation.indexes
-    - navigation.tabs
     - navigation.top
     - navigation.tracking
     - privacy
@@ -42,8 +61,7 @@ plugins:
         remove_comments: true
       #js_files: []
   - redirects:
-      redirect_maps:
-        'index.md': 'handbook/index.md'
+      redirect_maps: {}
 markdown_extensions:
   - admonition
   - attr_list
@@ -59,6 +77,7 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight:
+      anchor_linenums: true
       use_pygments: true
       linenums: true
   - pymdownx.inlinehilite
@@ -73,4 +92,11 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
+extra:
+  social:
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/koor_tech
+    - icon: fontawesome/brands/medium
+      link: https://koor.tech/blog/
